test/tests/stages/7_compound_statements/valid/multiple_vars_same_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  {
  int
  identifier(b)
  =
  const int(4)
  ;
  identifier(a)
  =
  identifier(b)
  ;
  }
  {
  int
  identifier(b)
  =
  const int(2)
  ;
  identifier(a)
  =
  identifier(a)
  -
  identifier(b)
  ;
  }
  return
  identifier(a)
  ;
  }
